k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blacklist-system
  labels:
    name: blacklist-system
    app.kubernetes.io/name: blacklist
    app.kubernetes.io/part-of: blacklist-system
