k8s/base/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blacklist-nodeport
  labels:
    app: blacklist
spec:
  type: NodePort
  selector:
    app: blacklist
  ports:
  - name: http
    port: 8541
    targetPort: http
    protocol: TCP
    nodePort: 32542
  sessionAffinity: None
